src/shared/lib/oql/oql-parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { start: peg$parsestart },
      peg$startRuleFunction  = peg$parsestart,

      peg$c0 = function() { return false; },
      peg$c1 = /^[0-9]/,
      peg$c2 = peg$classExpectation([["0", "9"]], false, false),
      peg$c3 = function(number) { return number.join("");},
      peg$c4 = "-",
      peg$c5 = peg$literalExpectation("-", false),
      peg$c6 = function(number) { return "-"+number;},
      peg$c7 = ".",
      peg$c8 = peg$literalExpectation(".", false),
      peg$c9 = function(whole_part, decimal_part) { return whole_part + "." + decimal_part;},
      peg$c10 = function(decimal_part) { return "."+decimal_part;},
      peg$c11 = function(whole_part) {return whole_part;},
      peg$c12 = /^[\-_.@\/a-zA-Z0-9*]/,
      peg$c13 = peg$classExpectation(["-", "_", ".", "@", "/", ["a", "z"], ["A", "Z"], ["0", "9"], "*"], false, false),
      peg$c14 = function(word) { return word.join("") },
      peg$c15 = /^[\-_.\/a-zA-Z0-9*]/,
      peg$c16 = peg$classExpectation(["-", "_", ".", "/", ["a", "z"], ["A", "Z"], ["0", "9"], "*"], false, false),
      peg$c17 = function(char) { return char; },
      peg$c18 = /^[GPAVLIMCFYWHKRQNEDST]/,
      peg$c19 = peg$classExpectation(["G", "P", "A", "V", "L", "I", "M", "C", "F", "Y", "W", "H", "K", "R", "Q", "N", "E", "D", "S", "T"], false, false),
      peg$c20 = function(letter) { return letter; },
      peg$c21 = /^[^"]/,
      peg$c22 = peg$classExpectation(["\""], true, false),
      peg$c23 = function(stringExceptQuotes) { return stringExceptQuotes.join("") },
      peg$c24 = /^[ \t\r]/,
      peg$c25 = peg$classExpectation([" ", "\t", "\r"], false, false),
      peg$c26 = /^[,; \t\r\n]/,
      peg$c27 = peg$classExpectation([",", ";", " ", "\t", "\r", "\n"], false, false),
      peg$c28 = "[",
      peg$c29 = peg$literalExpectation("[", false),
      peg$c30 = "\"",
      peg$c31 = peg$literalExpectation("\"", false),
      peg$c32 = function(label) {return {"label": label, "list":[]};},
      peg$c33 = function() {return {"label": undefined, "list":[]};},
      peg$c34 = "amp",
      peg$c35 = peg$literalExpectation("AMP", true),
      peg$c36 = "homdel",
      peg$c37 = peg$literalExpectation("HOMDEL", true),
      peg$c38 = "gain",
      peg$c39 = peg$literalExpectation("GAIN", true),
      peg$c40 = "hetloss",
      peg$c41 = peg$literalExpectation("HETLOSS", true),
      peg$c42 = "mut",
      peg$c43 = peg$literalExpectation("MUT", true),
      peg$c44 = "exp",
      peg$c45 = peg$literalExpectation("EXP", true),
      peg$c46 = "prot",
      peg$c47 = peg$literalExpectation("PROT", true),
      peg$c48 = function(mqr, sqr) {return mqr.concat(sqr);},
      peg$c49 = function(qr, sqr) {return qr.concat(sqr);},
      peg$c50 = function(mqr) {return mqr;},
      peg$c51 = function(qr) {return qr; },
      peg$c52 = "]",
      peg$c53 = peg$literalExpectation("]", false),
      peg$c54 = function(mergedGenes, qr, mqr) { mergedGenes.list = qr; return [mergedGenes].concat(mqr);; },
      peg$c55 = function(mergedGenes, qr) { mergedGenes.list = qr; return [mergedGenes]; },
      peg$c56 = function(first, rest) { return [first].concat(rest); },
      peg$c57 = function(first) { return [first]; },
      peg$c58 = ":",
      peg$c59 = peg$literalExpectation(":", false),
      peg$c60 = function(geneName, alts) { return {"gene": geneName, "alterations": alts}; },
      peg$c61 = function(geneName) { return {"gene": geneName, "alterations":false}; },
      peg$c62 = function(a1, a2) { return [a1].concat(a2);},
      peg$c63 = function(a1) { return [a1]; },
      peg$c64 = function(cmd) { return cmd; },
      peg$c65 = "_",
      peg$c66 = peg$literalExpectation("_", false),
      peg$c67 = function(d) { return {"alteration_type":"any", modifiers:[d]}; },
      peg$c68 = function() { return "AMP"; },
      peg$c69 = function() { return "HOMDEL"; },
      peg$c70 = function() { return "GAIN"; },
      peg$c71 = function() { return "HETLOSS"; },
      peg$c72 = "cna",
      peg$c73 = peg$literalExpectation("CNA", true),
      peg$c74 = function(op, constrval) { return {"alteration_type":"cna", "constr_rel":op, "constr_val":constrval, modifiers:[]}; },
      peg$c75 = "CNA_",
      peg$c76 = peg$literalExpectation("CNA_", false),
      peg$c77 = function(mod) { return {"alteration_type":"cna", modifiers:[mod]}; },
      peg$c78 = function(constrval, mod) { return {"alteration_type":"cna", "constr_rel":"=", "constr_val":constrval, modifiers:[mod]}; },
      peg$c79 = "_CNA",
      peg$c80 = peg$literalExpectation("_CNA", false),
      peg$c81 = function(mod, constrval) { return {"alteration_type":"cna", "constr_rel":"=", "constr_val":constrval, modifiers:[mod]}; },
      peg$c82 = function(constrval) { return {"alteration_type":"cna", "constr_rel":"=", "constr_val":constrval, modifiers:[]}; },
      peg$c83 = "MUT",
      peg$c84 = peg$literalExpectation("MUT", false),
      peg$c85 = "=",
      peg$c86 = peg$literalExpectation("=", false),
      peg$c87 = function(mutation) { return {"alteration_type":"mut", "constr_rel": "=", "constr_type":mutation.type, "constr_val":mutation.value, "info":mutation.info, modifiers: mutation.modifiers}; },
      peg$c88 = "!=",
      peg$c89 = peg$literalExpectation("!=", false),
      peg$c90 = function(mutation) { return {"alteration_type":"mut", "constr_rel": "!=", "constr_type":mutation.type, "constr_val":mutation.value, "info":mutation.info, modifiers: mutation.modifiers}; },
      peg$c91 = function(mutation) {
      	        if (mutation.type) {
      	            return {"alteration_type":"mut", "constr_rel": "=", "constr_type":mutation.type, "constr_val":mutation.value, "info":mutation.info, modifiers: mutation.modifiers};
                  } else {
                      return {"alteration_type":"mut", "info":{}, "modifiers": mutation.modifiers};
                  }
              },
      peg$c92 = "EXP",
      peg$c93 = peg$literalExpectation("EXP", false),
      peg$c94 = function(op, constrval) { return {"alteration_type":"exp", "constr_rel":op, "constr_val":parseFloat(constrval)}; },
      peg$c95 = "fusion",
      peg$c96 = peg$literalExpectation("FUSION", true),
      peg$c97 = function(mod) { return {"alteration_type":"fusion", modifiers: [mod] }; },
      peg$c98 = "_fusion",
      peg$c99 = peg$literalExpectation("_FUSION", true),
      peg$c100 = function() { return {"alteration_type":"fusion", modifiers:[]}; },
      peg$c101 = "PROT",
      peg$c102 = peg$literalExpectation("PROT", false),
      peg$c103 = function(op, constrval) { return {"alteration_type":"prot", "constr_rel":op, "constr_val":parseFloat(constrval)}; },
      peg$c104 = ">=",
      peg$c105 = peg$literalExpectation(">=", false),
      peg$c106 = function() { return ">="; },
      peg$c107 = "<=",
      peg$c108 = peg$literalExpectation("<=", false),
      peg$c109 = function() { return "<="; },
      peg$c110 = ">",
      peg$c111 = peg$literalExpectation(">", false),
      peg$c112 = function() { return ">"; },
      peg$c113 = "<",
      peg$c114 = peg$literalExpectation("<", false),
      peg$c115 = function() { return "<"; },
      peg$c116 = function(modifier, mutationWithModifiers) { mutationWithModifiers.modifiers.unshift(modifier); return mutationWithModifiers; },
      peg$c117 = function(mutation, modifiers) { mutation.modifiers = modifiers; return mutation; },
      peg$c118 = function(modifier) { return { info: {}, modifiers: [modifier] }; },
      peg$c119 = function(mutation) { mutation.modifiers = []; return mutation; },
      peg$c120 = function(modifier, more) { return [modifier].concat(more); },
      peg$c121 = function(modifier) { return [modifier]; },
      peg$c122 = function() { return {"info":{}}; },
      peg$c123 = "missense",
      peg$c124 = peg$literalExpectation("MISSENSE", true),
      peg$c125 = function() { return {"type":"class", "value":"MISSENSE", "info":{}}; },
      peg$c126 = "nonsense",
      peg$c127 = peg$literalExpectation("NONSENSE", true),
      peg$c128 = function() { return {"type":"class", "value":"NONSENSE", "info":{}}; },
      peg$c129 = "nonstart",
      peg$c130 = peg$literalExpectation("NONSTART", true),
      peg$c131 = function() { return {"type":"class", "value":"NONSTART", "info":{}}; },
      peg$c132 = "nonstop",
      peg$c133 = peg$literalExpectation("NONSTOP", true),
      peg$c134 = function() { return {"type":"class", "value":"NONSTOP", "info":{}}; },
      peg$c135 = "frameshift",
      peg$c136 = peg$literalExpectation("FRAMESHIFT", true),
      peg$c137 = function() { return {"type":"class", "value":"FRAMESHIFT", "info":{}}; },
      peg$c138 = "inframe",
      peg$c139 = peg$literalExpectation("INFRAME", true),
      peg$c140 = function() { return {"type":"class", "value":"INFRAME", "info":{}}; },
      peg$c141 = "splice",
      peg$c142 = peg$literalExpectation("SPLICE", true),
      peg$c143 = function() { return {"type":"class", "value":"SPLICE", "info":{}}; },
      peg$c144 = "trunc",
      peg$c145 = peg$literalExpectation("TRUNC", true),
      peg$c146 = function() { return {"type":"class", "value":"TRUNC", "info":{}}; },
      peg$c147 = "promoter",
      peg$c148 = peg$literalExpectation("PROMOTER", true),
      peg$c149 = function() { return {"type":"class", "value":"PROMOTER", "info":{}}; },
      peg$c150 = function(letter, position, string) { return {"type":"name" , "value":(letter+position+string), "info":{}};},
      peg$c151 = function(letter, position) { return {"type":"position", "value":parseInt(position), "info":{"amino_acid":letter.toUpperCase()}}; },
      peg$c152 = function(mutation_name) { return {"type":"name", "value":mutation_name, "info":{"unrecognized":true}}; },
      peg$c153 = function(firstChar, rest) { return firstChar + rest; },
      peg$c154 = function(lastChar) { return lastChar; },
      peg$c155 = function(mod) { return mod; },
      peg$c156 = "germline",
      peg$c157 = peg$literalExpectation("GERMLINE", true),
      peg$c158 = function() { return { type: "GERMLINE" };},
      peg$c159 = "loh",
      peg$c160 = peg$literalExpectation("LOH", true),
      peg$c161 = function() { return { type: "LOH" };},
      peg$c162 = "somatic",
      peg$c163 = peg$literalExpectation("SOMATIC", true),
      peg$c164 = function() { return { type: "SOMATIC" };},
      peg$c165 = function(range) { return range; },
      peg$c166 = function(d) { return d; },
      peg$c167 = "driver",
      peg$c168 = peg$literalExpectation("DRIVER", true),
      peg$c169 = function() { return { type:"DRIVER" };},
      peg$c170 = "(",
      peg$c171 = peg$literalExpectation("(", false),
      peg$c172 = /^[*]/,
      peg$c173 = peg$classExpectation(["*"], false, false),
      peg$c174 = ")",
      peg$c175 = peg$literalExpectation(")", false),
      peg$c176 = function(start, end, e) { return { "type":"RANGE", "start":parseInt(start, 10), "end":parseInt(end, 10), completeOverlapOnly: !!e } },
      peg$c177 = "(-",
      peg$c178 = peg$literalExpectation("(-", false),
      peg$c179 = function(end, e) { return { "type":"RANGE", "end":parseInt(end, 10), completeOverlapOnly: !!e } },
      peg$c180 = function(start, e) { return { "type":"RANGE", "start":parseInt(start, 10), completeOverlapOnly: !!e } },

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsestart() {
    var s0, s1;

    s0 = peg$parseQuery();
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parsesp();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c0();
      }
      s0 = s1;
    }

    return s0;
  }

  function peg$parseNaturalNumber() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    if (peg$c1.test(input.charAt(peg$currPos))) {
      s2 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s2 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c2); }
    }
    if (s2 !== peg$FAILED) {
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        if (peg$c1.test(input.charAt(peg$currPos))) {
          s2 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c2); }
        }
      }
    } else {
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c3(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseNumber() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 45) {
      s1 = peg$c4;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c5); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseNumber();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c6(s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseNaturalNumber();
      if (s1 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 46) {
          s2 = peg$c7;
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c8); }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseNaturalNumber();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c9(s1, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        if (input.charCodeAt(peg$currPos) === 46) {
          s1 = peg$c7;
          peg$currPos++;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c8); }
        }
        if (s1 !== peg$FAILED) {
          s2 = peg$parseNaturalNumber();
          if (s2 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c10(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parseNaturalNumber();
          if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c11(s1);
          }
          s0 = s1;
        }
      }
    }

    return s0;
  }

  function peg$parseString() {
    var s0, s1, s2;
